# libwallaby

./: .gitignore  CMakeLists.txt  uninstall.sh
include/kipr/: create.h
include/wallaby/: camera.hpp
module/accel/src/: accel_p.cpp
module/camera/: CMakeLists.txt
module/camera/src/: camera.cpp
module/create/public/kipr/create/: create.h  create.hpp
module/create/src/: create.cpp  create_c.cpp
module/gyro/src/: gyro_p.cpp
module/magneto/src/: magneto_p.cpp
src/: accel_p.cpp  camera.cpp  create_c.cpp  gyro_p.cpp
toolchain/: clang-aarch64.cmake
